; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/sti/extr_sti_hda.c_sti_hda_late_register.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/sti/extr_sti_hda.c_sti_hda_late_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_connector = type { i32 }
%struct.sti_hda_connector = type { %struct.sti_hda* }
%struct.sti_hda = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"HDA debugfs setup failed\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_connector*)* @sti_hda_late_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sti_hda_late_register(%struct.drm_connector* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.drm_connector*, align 8
  %4 = alloca %struct.sti_hda_connector*, align 8
  %5 = alloca %struct.sti_hda*, align 8
  store %struct.drm_connector* %0, %struct.drm_connector** %3, align 8
  %6 = load %struct.drm_connector*, %struct.drm_connector** %3, align 8
  %7 = call %struct.sti_hda_connector* @to_sti_hda_connector(%struct.drm_connector* %6)
  store %struct.sti_hda_connector* %7, %struct.sti_hda_connector** %4, align 8
  %8 = load %struct.sti_hda_connector*, %struct.sti_hda_connector** %4, align 8
  %9 = getelementptr inbounds %struct.sti_hda_connector, %struct.sti_hda_connector* %8, i32 0, i32 0
  %10 = load %struct.sti_hda*, %struct.sti_hda** %9, align 8
  store %struct.sti_hda* %10, %struct.sti_hda** %5, align 8
  %11 = load %struct.sti_hda*, %struct.sti_hda** %5, align 8
  %12 = load %struct.sti_hda*, %struct.sti_hda** %5, align 8
  %13 = getelementptr inbounds %struct.sti_hda, %struct.sti_hda* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @hda_debugfs_init(%struct.sti_hda* %11, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %1
  %20 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %2, align 4
  br label %24

23:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %19
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.sti_hda_connector* @to_sti_hda_connector(%struct.drm_connector*) #1

declare dso_local i64 @hda_debugfs_init(%struct.sti_hda*, i32) #1

declare dso_local i32 @DRM_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
